Lighter toggle background to fix contrast issue

--- a/stylesheets/combined.css
+++ b/stylesheets/combined.css
@@ -126,7 +126,7 @@ ul#menu-topnav li:hover > a{color:#FFF;text-decoration:underline;text-decoration
     #top_nav ul#menu-topnav li.mobile-only { display: none; }
 }
 .slicknav_menu{display:none; background-color: #0d4e95 !important; }
-.slicknav_btn{z-index: 10000;background-color: #FF6A2A !important;}
+.slicknav_btn{z-index: 10000;background-color: #ffab86 !important;}
 .slicknav_btn:focus{
     outline: 1px solid white !important;
 }
